destiny theme adjusted

--- a/index.html
+++ b/index.html
@@ -24,57 +24,10 @@
         <h1>Xur's stash</h1>
     </header>
 
-    <!--     <div class="container">
-            <div class="row">
-                <div class="col-sm-6">
-                    <h1>items</h1>
-                    <div class="dropdown">
-                        <a class="btn dropdown-toggle" href="#" role="button" id="dropdownMenuLink" data-toggle="dropdown"
-                            aria-haspopup="true" aria-expanded="false">Filter</a>
-                        <div class="dropdown-menu" aria-labelledby="dropdownMenuLink">
-                            <a class="dropdown-item" id="Weapon" value="Weapon">Weapon</a>
-                            <a class="dropdown-item" id="Gear" value="Gear">gear</a>
-                            <a class="dropdown-item" id="Consumables" value="Consumables">Consumable</a>
-                            <div class="dropdown-divider"></div>
-                            <a class="dropdown-item" id="all" value="all">All</a>
-                        </div>
-                    </div>
-    
-                    <div id="items"></div>
-                </div>
-    
-                <div class="col-sm-6">
-                    <h1>Cart</h1>
-                    <div id="cart"></div>
-                </div>
-            </div>
-        </div>
- -->
-
-    <div class="container">
+    <div class="container-fluid">
         <div class="row">
             <div class="col-sm-6">
-                <div class="dropdown">
-                    <a class="btn dropdown-toggle btn btn-info" href="#" role="button" id="dropdownMenuLink"
-                        data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Filter</a>
-                    <div class="dropdown-menu" aria-labelledby="dropdownMenuLink">
-                        <a class="dropdown-item" id="Weapon" value="Weapon">Weapon</a>
-                        <a class="dropdown-item" id="Gear" value="Gear">gear</a>
-                        <a class="dropdown-item" id="Consumables" value="Consumables">Consumable</a>
-                        <div class="dropdown-divider"></div>
-                        <a class="dropdown-item" id="all" value="all">All</a>
-                    </div>
-                </div>
-                <br>
-                <div class="row">
-                    <div class="col">
-                        <h1>This Weeks Goodies</h1>
-                        <div class="p-3 m-2" id="items"></div>
-                    </div>
-                </div>
-            </div>
-            <div class="col-sm-2"></div>
-            <div class="col-sm-4">
+
                 <h1>Shopping Cart</h1>
                 <div class="container">
                     <div class="row">
@@ -83,6 +36,29 @@
                         </div>
                     </div>
                 </div>
+            </div>
+            <div class="col-sm-2"></div>
+            <div class="col-sm-4 ">
+                <div class="row">
+                    <div class="col">
+                        <div class="dropdown">
+                            <a class="btn dropdown-toggle btn btn-info" href="#" role="button" id="dropdownMenuLink"
+                                data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Filter</a>
+                            <div class="dropdown-menu" aria-labelledby="dropdownMenuLink">
+                                <a class="dropdown-item" id="Weapon" value="Weapon">Weapon</a>
+                                <a class="dropdown-item" id="Gear" value="Gear">gear</a>
+                                <a class="dropdown-item" id="Consumables" value="Consumables">Consumable</a>
+                                <div class="dropdown-divider"></div>
+                                <a class="dropdown-item" id="all" value="all">All</a>
+                            </div>
+                        </div>
+                        <br>
+                        <h1>This Weeks Goodies</h1>
+                        <br>
+                        <div class="p-3 m-2" id="items"></div>
+                    </div>
+                </div>
+
             </div>
         </div>
     </div>
